# APP-G1

./: .gitignore  README.md
app-g1/: README.md  package-lock.json  package.json  vue.config.js
app-g1/src/: manifest.json  pages.json
app-g1/src/api/: g1.ts  visionSocket.ts  voiceSocket.ts  vrSocket.ts
app-g1/src/pages/agent/: agent.vue
app-g1/src/pages/ai/: ai.vue
app-g1/src/pages/index/: index.vue
app-g1/src/pages/kb/: kb.vue
app-g1/src/pages/motion/: motion.vue
app-g1/src/pages/vision/: vision.vue
app-g1/src/pages/voice/: voice.vue
tang/WK/G1Nav2D/: 启动脚本.txt
tang/WK/G1Nav2D/client/: YgClient.py  constants.py
tang/WK/G1Nav2D/devel/: .catkin  local_setup.sh
tang/WK/G1Nav2D/devel/include/fastlio/: MapConvert.h  SaveMap.h  SlamReLoc.h  SlamReLocRequest.h  SlamRelocCheckResponse.h  SlamStartRequest.h  SlamStartResponse.h
tang/WK/G1Nav2D/devel/include/xju_pnc/: xju_task.h
tang/WK/G1Nav2D/devel/lib/fastlio/: debug_reloc.py  localizer_node  map_builder_node
tang/WK/G1Nav2D/devel/lib/pkgconfig/: fastlio.pc  ros_map_edit.pc  tool.pc
tang/WK/G1Nav2D/devel/lib/tool/: body2any_pointcloud  body2map_pointcloud  livox2velodyne  path2waypoint  record_teaching_path.py
tang/WK/G1Nav2D/devel/lib/velocity_smoother_ema/: velocity_smoother_ema_node
tang/WK/G1Nav2D/src/fastlio2/PCD/: ground_map.pcd  mymap2.pcd
tang/WK/G1Nav2D/src/livox_ros_driver2/: CMakeLists.txt
tang/WK/G1Nav2D/src/movebase/: package.xml
tang/WK/G1Nav2D/src/ros_map_edit/: CMakeLists.txt
tang/WK/PythonProject/daohang/: daohang_weishengjian.py
tang/WK/PythonProject/doubao/: recognition_result_20250821_172436.txt  recognition_result_20250821_172455.txt
tang/WK/PythonProject/face/: face.py  takep.py
tang/WK/PythonProject/point_nav/audio/: test.raw
tang/WK/PythonProject/py-xiaozhi-main/: README.md  install_service.sh  main.py  recognition_result.txt  start_g1.sh  test_g1_audio.py
tang/WK/PythonProject/py-xiaozhi-main/documents/: tsconfig.json
tang/WK/PythonProject/py-xiaozhi-main/src/: dir_structure.txt
tang/WK/PythonProject/py-xiaozhi-main/templates/: activation.html  dashboard.html
tang/WK/PythonProject/py-xiaozhi-main/yushudongzuo/: mcp_handshake.py
tang/actions/: test.json  test1.json
tang/cyclonedds/install/lib/pkgconfig/: CycloneDDS.pc
tang/exhibition_paths/: _temp_run_script.py  mymap-03.json  mymap2-01.json  mymap3-01.json  test1.json  zhanting-test.json
tang/map/: mymap.xcf  mymap.yaml  mymap1.yaml  mymap2.yaml  mymap3.pgm  zhanting1.pgm  zhanting2.pgm  zhanting2.yaml
tang/tang/WK/: README.md
tang/tang/WK/G1Nav2D/client/: DogControllerSDK.py  clientTrue.html
tang/tang/WK/G1Nav2D/devel/: setup.sh
tang/tang/WK/G1Nav2D/src/movebase/: CMakeLists.txt
tang/tang/WK/G1Nav2D/src/movebase/launch/: move_base.launch
tang/tang/WK/G1Nav2D/src/movebase/param/: costmap_params.yaml  teb_local_planner_params.yaml
tang/tang/WK/G1Nav2D/src/tool/: CMakeLists.txt
tang/tang/WK/G1Nav2D/src/tool/launch/: downsample_pointcloud.launch  path2waypoint.launch  record_teaching_path.launch
tang/tang/WK/G1Nav2D/src/tool/src/: body2any_pointcloud.cpp  body2map_pointcloud.cpp  downsample_pointcloud.cpp  livox2velodyne.cpp  local2map_odom.cpp
tang/tang/WK/PythonProject/daohang/: daohang-dianti.py
tang/tang/WK/PythonProject/doubao/: 111.py  test.py
tang/tang/WK/PythonProject/face/: face.py
tang/tang/WK/PythonProject/point_nav/: create_audio.py  point1.py  point2.py  point2_improved.py  point3.py  point4.py  point5.py
tang/tang/WK/PythonProject/py-xiaozhi-main/: G1_AUDIO_GUIDE.md  G1_AUDIO_README.md  README.en.md  app.py  g1-xiaozhi.service  requirements.txt  run.sh  test_g1_mic_fixed.py  开机启动.py  网站搭建.py
tang/tang/WK/shouna/: contact
tang/tang/actions/: test2.json
tang/tang/cyclonedds/install/lib/: libcycloneddsidl.so.0
tang/tang/exhibition_paths/: mymap03-01.json  test.json  zhanting02-1.json  zhanting02-2.json
tang/tang/map/: mymap.pgm  mymap1.pgm  mymap2.pgm  mymap3.yaml  zhanting.pgm  zhanting.yaml  zhanting1.yaml
(+378 files in other folders)
